[project]
name = "broker"
dynamic = ["version"]
authors = [
  { name = "João Gabriel Barbosa", email = "joaogcb29@gmail.com" },
]

[project.optional-dependencies]
dev = ["black", "isort"]

[tool.black]
line-length = 100
exclude = '/(\.git)/'

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
